--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "typecheck": "tsc --noEmit -p tsconfig.app.json"
+    "typecheck": "tsc --noEmit -p tsconfig.app.json",
+    "dev:server": "tsx server/index.ts"
   },
   "dependencies": {
     "@elevenlabs/elevenlabs-js": "^2.17.0",
+    "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.57.4",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
     "lucide-react": "^0.344.0",
     "phaser": "^3.90.0",
     "react": "^18.3.1",
@@ -32,6 +37,7 @@
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2"
