--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "lucide-react": "^0.344.0",
     "phaser": "^3.90.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "rollup": "^4.52.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
